--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "@grpc/grpc-js": "^1.3.7",
     "dotenv": "^10.0.0",
     "web3": "^1.5.2"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.24.2"
   }
 }
