--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@ethereumjs/tx": "^3.3.0",
     "@grpc/grpc-js": "^1.3.7",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "express-jwt": "^6.1.0",
+    "node-rsa": "^1.1.1",
     "web3": "^1.5.2"
   },
   "devDependencies": {
