--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "Rpc server of HeroicLoot",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node index.js"
   },
   "author": "Kerit",
   "license": "",
   "dependencies": {
-    "@ethereumjs/tx": "^3.3.0",
     "@grpc/grpc-js": "^1.3.7",
     "dotenv": "^10.0.0",
+    "ethereumjs-tx": "^1.3.7",
     "express": "^4.17.1",
     "express-jwt": "^6.1.0",
     "node-rsa": "^1.1.1",
