--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Rpc server of HeroicLoot",
   "main": "index.js",
   "scripts": {
-    "run": "node index.js",
+    "start": "node index.js",
     "test": "node index.js"
   },
   "author": "Kerit",
